--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+    font-family: 'Annie';
+    src: local('AnnieUseYourTelescope'), url(./Assets/Fonts/AnnieUseYourTelescope.ttf) format('truetype');
+    font-display: swap;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+    font-family: 'Neucha';
+    src: local('Neucha'), url(./Assets/Fonts/Neucha.ttf) format('truetype');
+    font-display: swap;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+    font-family: 'Sora';
+    src: local('Sora'), url(./Assets/Fonts/Sora.ttf) format('truetype');
+    font-display: swap;
 }
